Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1107,8 +1107,8 @@
  NOT_ENOUGH_BACKERS_IMP_REFORM:1 "改革を成立させるためには、賛成する諸侯が反対する諸侯の数を上回らなければなりません。"
  NOT_ENOUGH_AUTHORITY_IMP_REFORM:0 "少なくとも§R$COST$§!の帝国の権威が必要ですが、§Y$CURR$§!しか持っていません。"
  ENACT_REFORM:0 "§Y$REFORM$§!の制定により、あなたの帝国の権威はすべて削除されます。"
- MEMBER_BACKING_DUE_TO:2 "彼らは以下の理由で改革$REFORM|Y$を支持（$SCORE$）しています：\n"
- MEMBER_OPPOSE_DUE_TO:2 "彼らは以下の理由で改革$REFORM|Y$に反対（$SCORE$）しています：\n"
+ MEMBER_BACKING_DUE_TO:2 "彼らは以下の理由で改革「$REFORM|Y$」を支持（$SCORE$）しています：\n"
+ MEMBER_OPPOSE_DUE_TO:2 "彼らは以下の理由で改革「$REFORM|Y$」に反対（$SCORE$）しています：\n"
  FOLLOWING_BACK_IMP_REF:1 "改革に賛成する諸侯は$COUNT_FOR|G$で、反対は$COUNT_AGAINST|R$である。\n投票者の中央値は$WHO$で、その支持は$TOTAL$である。理由：\n$REASONS$\n"
  ALL_AGAUNST_IMP_REF:0 "§R$COUNT$§!の諸侯が改革に反対しています：\n$WHO$"
  HEIR_CHANCE_TOOLTIP:0 "後継者を得る可能性は$CHANCE$に補正されます。"
@@ -3488,11 +3488,11 @@
  MACRO_INCREASE_TRADE_VALUE:0 "（交易額が$VAL|+G2$増加します）"
  MACRO_MAINTENANCE_COST:0 "基本維持費：$COST|1$¤/月"
  MACRO_MAINTENANCE_FORCE_LIMIT_WARN:0 "§Rこれを建設すると扶養限界を超えます！§!"
- MACRO_INCREASE_MANPOWER_DESC:0 "この建造物は人的資源を$VAL$増加させます。"
- MACRO_INCREASE_INCOME_DESC:0 "この建造物は月間収入を$VAL$¤増加させます。"
+ MACRO_INCREASE_MANPOWER_DESC:1 "この建造物は人的資源を$VAL|0Y$増加させます。"
+ MACRO_INCREASE_INCOME_DESC:1 "この建造物は月間収入を$VAL|Y2$¤増加させます。"
  MACRO_INCREASE_PRODUCTION_DESC:0 "この建造物は生産を$VAL$増加させます。"
- MACRO_INCREASE_TRADE_VALUE_DESC:0 "この建造物は交易額を$VAL$増加させます。"
- MACRO_INCREASE_TRADE_POWER_DESC:0 "この建造物は交易力を$VAL$増加させます。"
+ MACRO_INCREASE_TRADE_VALUE_DESC:1 "この建造物は交易額を$VAL|Y2$増加させます。"
+ MACRO_INCREASE_TRADE_POWER_DESC:1 "この建造物は交易力を$VAL|Y2$増加させます。"
  MACRO_INCREASE_TAX_DESC:0 "この建造物は税収を増加させます：$VAL$"
  MACRO_PROVINCE_TRADE_NODE:0 "（この州は$TRADENODE$の交易ノードに属しています）"
  MACRO_BUILDING_ALL_BUILT:0 "この建物はすでに建設可能な州にすべて建設されています。"
@@ -3705,7 +3705,7 @@
  ALERT_REINFORCING_UNITS_DELAYED:1 "部隊に毎月$TROOPS|0Y$人（内、消耗により$TROOPSATTR|0Y$人）の兵員を補充しています。\n補充完了には$TOTAL_MISSING|0Y$人の兵員が必要です。\n常備軍の補充には追加コストとして毎月$COST|2Y$¤かかります。"
  ALERT_REINFORCING_UNITS_DELAYED_MERCENARIES:0 "補充中の傭兵部隊があります。人的資源は必要ありませんが、追加コストとして毎月$COST|2Y$¤かかります。"
  SENDGIFTALREADYACTIVE:0 "§R我々は最近彼らに贈り物を送りました。我々の最後の贈り物だけが彼らと我々との関係に影響を与えます。§!"
- CORE_CONST_OTHER_TIP:0 "彼らは現在§Y$PROVINCE$§!の中核化に取り組んでいます。"
+ CORE_CONST_OTHER_TIP:1 "彼らは現在§Y$PROVINCE$§!の中核化に取り組んでいます。進捗状況はこれまでのところ$PROGRESS|Y1%$です。この作業は$DATE|Y$まで行われます。"
  NO_SETTLER_IRO:0 "アイデアを通じて植民者を獲得する必要があります"
  MIL_VIEW_LOW_MORALE:0 "§R軍隊は移動できません！§!"
  DOMINANT_RELIGION_IS_NOT:0 "$COUNTRY$の支配的な宗教は右記でない：$RELIGION$"
