--- a/source/localisation/achievements_l_english.yml
+++ b/source/localisation/achievements_l_english.yml
@@ -175,7 +175,7 @@
  NEW_ACHIEVEMENT_7_26_NAME:0 "沼地の辺境伯"
  NEW_ACHIEVEMENT_7_26_DESC:0 "2つ以上の湿地の州を有する辺境伯を持つ。"
  NEW_ACHIEVEMENT_7_27_NAME:0 "王の中の王"
- NEW_ACHIEVEMENT_7_27_DESC:0 "タバリスターンで開始し、ペルシアを形成する。"
+ NEW_ACHIEVEMENT_7_27_DESC:1 "アルダビールで開始し、ペルシアを形成する。"
  NEW_ACHIEVEMENT_7_28_NAME:0 "賽よ頼む、死んでくだサイ"
  NEW_ACHIEVEMENT_7_28_DESC:0 "3つの能力が全て1以下で満70歳の統治者を得る。"
  NEW_ACHIEVEMENT_7_29_NAME:0 "三位一体"
@@ -261,7 +261,7 @@
  NEW_ACHIEVEMENT_9_5_NAME:0 "くらえ、ハプスブルク！"
  NEW_ACHIEVEMENT_9_5_DESC:0 "ハンガリーとして、全オーストリアを中核州として領有する。"
  NEW_ACHIEVEMENT_9_6_NAME:0 "白象"
- NEW_ACHIEVEMENT_9_6_DESC:0 "アユタヤとして、全インドシナを中核州として領有する。"
+ NEW_ACHIEVEMENT_9_6_DESC:1 "アユタヤとして、全インドシナ及びビルマを中核州として領有する。"
  NEW_ACHIEVEMENT_9_7_NAME:0 "仏教の逆襲"
  NEW_ACHIEVEMENT_9_8_NAME:0 "ナポレオン以上だ"
  NEW_ACHIEVEMENT_9_8_DESC:0 "フランスとして、ウィーン、ベルリン、モスクワを中核州として領有する。"
@@ -290,7 +290,7 @@
  NEW_ACHIEVEMENT_9_20_NAME:0 "大公国"
  NEW_ACHIEVEMENT_9_20_DESC:0 "公国級の国家で始めて、政府ランクを上げずに開発度を1000にする。"
  NEW_ACHIEVEMENT_9_21_NAME:0 "卑賤で裕福"
- NEW_ACHIEVEMENT_9_21_DESC:0 "開発度10以上の州を領有せずに、収入を世界一にする。"
+ NEW_ACHIEVEMENT_9_21_DESC:1 "開発度10以上の州を領有せず、また開始時に領有せずに、収入を世界一にする。"
  NEW_ACHIEVEMENT_9_22_NAME:0 "ストレイトな話"
  NEW_ACHIEVEMENT_9_22_DESC:0 "ホルムズとして、10以上の外交評判を持つ。"
  NEW_ACHIEVEMENT_9_23_NAME:0 "学術的だ"
@@ -386,7 +386,7 @@
  NEW_ACHIEVEMENT_11_5_NAME:0 "諸兵科連合"
  NEW_ACHIEVEMENT_11_5_DESC:0 "特性を持つ将軍と提督両名を保有する。"
  NEW_ACHIEVEMENT_11_6_NAME:0 "シボラの7都市"
- NEW_ACHIEVEMENT_11_6_DESC:0 "プエブロとして、開発度が10の州を7つ以上領有する。"
+ NEW_ACHIEVEMENT_11_6_DESC:1 "プエブロを主要文化としてもつ国で、開発度が10の州を7つ以上領有する。"
  NEW_ACHIEVEMENT_11_7_NAME:0 "ターキッシュ・デライト"
  NEW_ACHIEVEMENT_11_7_DESC:0 "ジャンダルで始め、自国と従属国で特産品が砂糖の州を20州領有する。"
  NEW_ACHIEVEMENT_11_8_NAME:0 "メェメェ黒羊さん"
@@ -692,7 +692,7 @@
  NEW_ACHIEVEMENT_97_NAME:0 "フランクフルトからアンデスまで"
  NEW_ACHIEVEMENT_97_DESC:0 "フランクフルトで開始し、エルサレムへと変態し、さらにマヨルカを領有しつつインカへと変態する。"
  NEW_ACHIEVEMENT_98_NAME:0 "メフメトの野望"
- NEW_ACHIEVEMENT_98_DESC:0 "オスマンとして1500年までに、ローマ帝国形成に必要な州を自国または中核エヤレトで領有する。"
+ NEW_ACHIEVEMENT_98_DESC:1 "オスマンとして1500年までに、ローマ帝国形成に必要な州を自国または中核エヤレトで領有する。"
  NEW_ACHIEVEMENT_99_NAME:0 "ローマ三重奏"
  NEW_ACHIEVEMENT_99_DESC:0 "ロシアで、中華皇帝と神聖ローマ帝国皇帝を兼任する。"
  NEW_ACHIEVEMENT_100_NAME:0 "老いたテルシオのための国ではない"
