--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -1775,7 +1775,7 @@
  flavor_fra.EVTOPTB3145:0 "寛大さを示す。"
  flavor_fra.EVTNAME3781:1 "恐怖政治の終わり"
  flavor_fra.EVTDESC3781:2 "恐怖政治の中で共和制の名の下に無数のフランス人が虐殺された。一つの脅威が排除されるとすぐに次の脅威が特定され、浄化された。誰もがそれが次にやって来るのを恐れたーいわゆる「今日は人の身、明日は我が身」である。議会は結束して、[Root.Monarch.GetTitle][Root.Monarch.GetName]を解任し、領土に安定を戻し、混沌を君主制の復活の言い訳として利用できないよう総裁政府を確立することで、恐怖を終わらせた。"
- flavor_fra.EVTOPTA3781:1 "政変によって秩序がもたらされたのだ。"
+ flavor_fra.EVTOPTA3781:1 "剣を取るものは剣によって滅ぶ。"
  flavor_fra.EVTNAME3146:1 "君主の運命"
  flavor_fra.EVTDESC3146:0 "1791年6月20日の国王一家の逃亡の失敗後、ルイ16世は軟禁状態に置かれた。恐怖政治が始まると、貴族は皆ギロチン台へ送られ、王は外国勢力と共謀した裏切り者であると宣告された。ルイ16世はまず退位を強制され、その後投獄され、「市民ルイ・カペー」と呼ばれるようになった。1793年1月15日、国民公会は王の処刑を投票にかけ、反対360票に対し賛成361票を獲得した。1793年1月21日、ルイ16世はギロチン台の露と消えた。"
  flavor_fra.EVTOPTA3146:0 "賛成票361、反対票360"
@@ -2508,7 +2508,7 @@
  flavor_brapru.39.a:0 "彼をここに連れて来い！"
  flavor_brapru.39.b:0 "我々は彼の和解の見解に従うことはできない。"
  flavor_brapru.40.t:0 "泥棒男爵の復活"
- flavor_brapru.40.d:0 "ブランデンブルクの土地はドイツで最も豊かというわけではなく、長い間、法律や秩序が困難な時代が続いた。結果として、多くの一族は、暴力的または強制的な手段によって財政的に必要な時に、自分の私服を肥やすという伝統を持っている。\n我々の田舎では、あまり裕福ではない貴族の一族による泥棒男爵に悩まされている。彼らは、我々の権威と、既に苦しんでいる商人の都市の市民たちの両方にとっての脅威である。我が国がここ「ドイツの砂場」で繁栄するためには、地元の貴族の秩序と破壊された伝統を回復しなければならない。"
+ flavor_brapru.40.d:0 "ブランデンブルクの土地はドイツで最も豊かというわけではなく、長い間、法律や秩序が困難な時代が続いた。結果として、多くの一族は、暴力的または強制的な手段によって財政的に必要な時に、自分の私服を肥やすという伝統を持っている。\n我々の田舎では、あまり裕福ではない貴族の一族による泥棒男爵に悩まされている。彼らは、我々の権威と、既に苦しんでいる商人の都市の市民たちの両方にとっての脅威である。我が国がここ「ドイツの砂場」で繁栄するためには、秩序を回復し地元の貴族の破滅的な伝統に終止符を打たなければならない。"
  flavor_brapru.40.a:0 "私は貴族の血を流したことはない、私はただ盗賊、強盗、殺人犯を処刑しただけだ。"
  flavor_brapru.40.a.tt:0 "我々は、数百の泥棒男爵を敗北させ、処刑するために軍隊を使用する。"
  flavor_brapru.40.b:0 "我々は貴族を怒らせる危険を冒すことはできない。"
