--- a/source/localisation/government_l_english.yml
+++ b/source/localisation/government_l_english.yml
@@ -125,7 +125,7 @@
  guiding_principle_of_administration:0 "統治の基本理念"
  political_principle_reform:0 "政治原則"
  political_principle_reform_desc:0 "共和国として、我々の国家指針は政治組織と政治的理想の効率をさらに高めるものでなければならない。"
- moral_principle_reform:0 "モラル原則"
+ moral_principle_reform:0 "倫理原則"
  moral_principle_reform_desc:0 "国家の主な機能の一つは、人々の善良さと徳の価値を維持することだ。共和国は多くの点で市民の善良で徳のある行動に依存しており、罪深い行動は国全体の利益のためにおしとどめられ、根絶されなければならない。"
  electorate:0 "有権者"
  landholders_reform:0 "地主"
@@ -177,7 +177,7 @@
  monastic_order_reform_desc:0 "この国は修道会の集団によって支配されている。修道会の階層と管理は、ほぼ全ての法律や管理の必要性を置き換える。"
  papacy_reform:0 "教皇制"
  papacy_reform_desc:0 "国の政治的構造は、宗教的指導者であり、ローマ・カトリック教会の最高位の要職である教皇によって統治されている。"
- leading_clergy_reform:0 "神権国"
+ leading_clergy_reform:0 "聖職者国家"
  leading_clergy_reform_desc:0 "この国は聖職者により支配されており、宗教上の上下関係がそのまま政府のそれを表している。"
  internal_vs_external_mission:0 "国内外への宣教"
  internal_mission_reform:0 "国内宣教"
