--- a/source/localisation/scandinavia_l_english.yml
+++ b/source/localisation/scandinavia_l_english.yml
@@ -3425,9 +3425,9 @@
  mechanic_seizing_land_loyalty_yes:1 "領地の没収による忠誠度減少を§G5%§!減少させる"
  regional_council_reform:0 "地方評議会"
  regional_council_reform_desc:0 "大帝国を維持するのは容易なことではない。すべての州に拠点を置くことは事実上不可能だからだ。地域の評議会は、政府が干渉することなく、彼ら自身で統治を組織化することを保証できるだろう。"
- representation_of_the_crown_reform:0 "君主の代表者"
- representation_of_the_crown_reform_desc:0 "我々の支配は直接的ではなく、君主に忠誠を誓う臣下や召使いを通して行われる。公式に選ばれた国の代表者は、従属国の支配者に忠誠を誓うよう助言する。"
- subject_tax_modifier:0 "君主の代表者"
+ representation_of_the_crown_reform:0 "君主の代理人"
+ representation_of_the_crown_reform_desc:0 "我々の支配は直接的ではなく、君主に忠誠を誓う従属国や官吏を通して行われる。公式に選ばれた国の代理人は、従属国の支配者が忠誠を維持し続けるよう助言を行う。"
+ subject_tax_modifier:0 "君主の代理人"
  mechanic_subject_tax_modifier_25_yes:1 "属国と辺境伯は§G25%§!の国家税補正を受け取る"
  dyanstic_administration_reform:0 "王朝による行政"
  dyanstic_administration_reform_desc:0 "国家に貢献するよりも自分たちの権力を拡大することを優先するために、階級らは王政の信頼できる同盟者足りえない。国家が直面する行政課題の管理を任せられるのは、支配者の親族だけであるべきだ。"
@@ -3779,7 +3779,7 @@
  pol_if_bent_nobles_and_republic_tt:0 "§Y共和制§!でミッションを達成した場合："
  pol_if_completed_via_diplomatic_relations_tt:0 "§Y外交関係§!によってこのミッションを達成した場合："
  pol_no_unrest_average_auto_above_min_5_in_hungarian_provinces_tt:1 "以下の地域で自国か自国の朝貢国以外の従属国が領有し、自治度が§Y5%§!未満かつ不穏度が無い：\n§Yアルフェルド地域\nドナウ川西岸地域\n北トランシルヴァニア地域\n南トランシルヴァニア地域\nスロバキア地域§!"
- pol_if_vassal_contracts_tt:1 "政府改革「§Y君主の代表者§!」を制定している状態でミッションを達成した場合、以下も獲得します："
+ pol_if_vassal_contracts_tt:1 "政府改革「§Y君主の代理人§!」を制定している状態でミッションを達成した場合、以下も獲得します："
  pol_no_unrest_average_auto_above_min_5_in_bohemian_provinces_tt:1 "以下の地域で自国か自国の朝貢国以外の従属国が領有し、自治度が§Y5%§!未満かつ不穏度が無い：\n§Yボヘミア地域\nエルツ山地地域\nラウジッツ地域\nモラヴィア地域\nシレジア地域§!"
  pol_krakow_any_level_tt:0 "記念碑「§Yクラクフ織物会館§!」を§Y1§!回以上アップグレードを行った"
  pol_had_kasimir_election_event_tt:0 "イベント「§Yヴワディスワフ3世の後継者§!」が発生済み"
@@ -4322,37 +4322,37 @@
  hsa_center_of_mineral_trade:0 "鉱物交易の中心地"
  hsa_maritime_hegemon_modifier:0 "海上覇権国"
  flavor_hsa.5.t:0 "ノブゴロドのコントール"
- flavor_hsa.5.d:0 "13世紀、ノヴゴロドはハンザ同盟の一員ではありませんでしたが、同盟の最東端のコントール、つまり商館で、高級毛皮（クロテン、オコジョ、キツネ、マーモット）および廉価品の毛皮（リスの毛皮）を大量に供給してきました。最近の外交的、地理的な発展により、自国の商人たちは長く失われていたヴェリーキー・ノヴゴロドの販売所を取り戻しました。"
+ flavor_hsa.5.d:1 "ノヴゴロドはかつてハンザ同盟にとって重要な国ではありましたが、同盟の一員ではありませんでした。そのため、ノヴゴロドのコントール（駐在員事務所）は同盟にとって重要な富の源泉でした。最近の外交的、地理的な発展により、自国の商人たちは長く失われていたヴェリーキー・ノヴゴロドの販売所を取り戻しました！"
  flavor_hsa.5.a:0 "リューベック国民にとって歴史的な日だ！"
  flavor_hsa.6.t:0 "リューベックのニシン市場"
- flavor_hsa.6.d:0 "この市場が人気を博した背景には、ファルステルボ半島周辺の豊かなニシン漁がありました。伝説によると、スコーネ地方沿岸部のニシン漁は非常に豊かで、手で魚をすくい上げることができたと言われています。1364年にこの地を訪れたフランス十字軍のフィリップ・ド・メジエールはこう記してます。「一年に二ヶ月間、つまり九月と十月に、ニシンは神の命により海峡を通過してある海域から別の海域へと移動する。それは大変な驚きであり、この月に海峡を通過する数が非常に多く、いくつかの場所では短刀でそれらを切断できる。」\n\nスコーネにおける競争相手として市場に乗り出すことは、おそらく非常に有益なことでしょう。しかし、この海峡には多くの海洋生物が生息しているにもかかわらず、自国の宮廷の顧問の多くが自国の主要輸出品であるリューベックの海軍用品をひいきし続けることが最善だと提案しています。"
+ flavor_hsa.6.d:2 "ファルステルボ半島周辺にニシンの大群がいることは有名な話です。漁師たちは貴重で新鮮な商品を民衆に提供してきたことから、民衆は長きにわたりニシンの豊富さについての物語を語ってきました。簡単に手に入るこの豊富な魚は、スコーネ周辺の市場に供給され、ニシン貿易に携わるすべての商人にとって大きな富の源となってきました。\n\nスコーネにおける競争相手として市場に乗り出すことは、おそらく非常に有益なことでしょう。しかし、この海峡には多くの海洋生物が生息しているにもかかわらず、自国の宮廷の顧問の多くが自国の主要輸出品であるリューベックの海軍用品をひいきし続けることが最善だと提案しています。"
  flavor_hsa.6.a:0 "隣国と競争しようじゃないか！"
  flavor_hsa.6.b:0 "伝統を捨てることなど決してできない..."
  flavor_hsa.6.c:0 "保存方法を開発して競合相手より多く生産しよう！"
  flavor_hsa.7.t:0 "ブリッゲンのドックと埠頭"
- flavor_hsa.7.d:0 "都市ブリッゲンは1070年頃、ティスクブリッゲンの区域内に創設されました。1350年頃にはハンザ同盟のコントールが建造され、ティスクブリッゲンはノルウェー内におけるハンザ同盟の商業活動の中心地となりました。以来、同盟はその地の影響力を失い、販売所は他の現地商人や外国人商人に譲られました。\n\n[GetYear]年頃、ハンザ同盟の販売所がブリッゲンに設置されました。町が重要な交易中心地として発展するにつれ、埠頭が改善され、ブリッゲンの建物は徐々にハンザ同盟の商人たちによって占拠されるようになりました。倉庫群は商品の保管、特にノルウェー北部からの畜産物やヨーロッパからの穀物の保管のために使われました。"
+ flavor_hsa.7.d:2 "ハンザ同盟はブリッゲンのコントールで活動を開始して以来、何世紀にもわたってノルウェーに存在してきました。ブリッゲンはすぐに重要な貿易拠点となり、ノルウェー沿岸交易を支配しました。しかし、同盟の都市における影響力は低下するにつれて、事務所や倉庫は現地商人に奪われるようになりました。\n\n[GetYear]年頃、ハンザ同盟の販売所がブリッゲンに再び設置されました。この地域が再びハンザ同盟の交易中心地としての重要性を取り戻すと、埠頭や倉庫を含む港周辺の施設は繁栄し、新たに流入してきた商人たちに商業能力を提供するために大幅に拡張されました。"
  flavor_hsa.7.a:0 "究極の商魂と協調だ！"
  flavor_hsa.8.t:0 "ハンザ都市ヴィスビュー"
- flavor_hsa.8.d:0 "ヴィスビューは本土から約100km東のバルト海に浮かぶゴットランド島にあります。ヴァイキング時代の集落は絶壁で匿われている天然港のある海岸に作られました。ゴットランドの商人はバルト海交易の要衝地として利用しました。彼らは交易所を守るために同盟を結び、その同盟はハンザという連合体へと発展していきました。12世紀にはバルト海の商業路は全てこの街を経由するようになり、この交易はヴィスビューが支配するようになりました。1143年にリューベックが創設されると、ドイツ商人たちはバルト海まで関心の範囲を広げ始め、ヴィスビューに居を構えるようになりました。ヴィスビューはドイツの町との交易権を持つ島で唯一の交易地となり、それゆえハンザ同盟の中心地となりましら。13世紀には、ヴィスビューは季節的な交易の場から強力な防護壁で囲まれ、農村の内陸地からさらに切り離された印象的な大都市へと変貌を遂げました。城壁はゴットランドの交易商に新たな制限を課し、1288年の内戦へとつながる緊張を引き起こしました。ドイツやロシア、デンマークの交易商たちは、港から石造りの倉庫を並行列に建て、共同体は組合会館や教会、居住地を拡大させました。14世紀に入ると、1350年頃の黒死病や1361年のヴァルデマー再興王率いるデンマーク軍の侵攻により、ヴィスビューはハンザ同盟における指導的立場を失い始めました。15世紀には戦乱と海賊、そしてヴィスビューを迂回する交易路の変化により、ゴットランド島の交易に深刻な影響を与え、ヴィスビューの経済も悪化していきました。しかし、最近ハンザ商人たちがゴットランドを再奪取したことで、ゴットランドの市場やその他地域にも新風が吹くことでしょう。"
+ flavor_hsa.8.d:2 "天然の港であるヴィスビューは、長い間バルト海交易の要衝地でした。地元の商人たちは外国の商人たちと容易に協力し合い、ヴィスビューはロシアの寒冷な荒地とヨーロッパ西部の商人たちを結ぶ港となりました。同時に、この街には印象的な要塞が築かれ、頑丈で信頼できる商業都市としてのイメージをさらに高めています。"
  flavor_hsa.8.a:0 "これぞ同盟の働きの成果だ！"
  flavor_hsa.9.t:0 "ダンツィヒ同盟"
- flavor_hsa.9.d:0 "プロイセン同盟（ドイツ語：プロイセン同盟、ポーランド語：プルシ連合）は、1440年2月21日にマリーエンヴェルダー にてプロイセンの53の貴族及び聖職者と19都市がチュートン騎士団の専横に対抗するために結成された組織です。この組織は1397年にヘウムノの貴族によって設立された初期の類似組織である蜥蜴連合を母体としたものでした。\n\n1454年、同盟の指導者であるヨハネス・フォン・ベイセン（ヤン・バジンスキー）は、プロイセンを封土としてポーランド王国に編入することを王カジミェシュ4世ヤギェウォに正式に申し入れました。これが騎士団国家とポーランド間の十三年戦争の始まりで、プロイセンの都市は後者の軍事費を負担しました。\n\nこのような両者の紛争はありましたが、現在ダンツィヒは自国の勢力圏内にあります。その結果、同市の商人や同盟の仲間がリューベックの宮廷を訪れて交易を行い、自国の繁栄する市場への参入を求めたのでした。"
+ flavor_hsa.9.d:2 "1440年2月21日にマリーエンヴェルダーにてプロイセンのいくつかの都市の貴族及び聖職者が、チュートン騎士団による商業規制に反対して結成したダンツィヒ同盟は、瞬く間にこの地域の内政における有力者となりました。やがて彼らは、ポーランド王がチュートン人に対抗するために武器を手にすると、ポーランド王の庇護を求めるようになります。\n\nこのような両者の紛争はありましたが、現在ダンツィヒは自国の勢力圏内にあります。その結果、同市の商人や同盟の仲間がリューベックの宮廷を訪れて交易を行い、自国の繁栄する市場への参入を求めたのでした。"
  flavor_hsa.9.a:0 "我が都市は彼らの影響を認めてよい。"
  flavor_hsa.9.b:0 "いかなる外国の干渉も受けぬ！"
  flavor_hsa.10.t:0 "リューベックの役所"
- flavor_hsa.10.d:0 "私たちはかつて「ハンザの女王」と呼ばれ、リューベック市長を盟主として中世のハンザ同盟の運命を誘ってきました。そしてハンザ同盟は決して正式に設立も解散もされませんでした。私たちの同盟にはヨーロッパ中の商人が集まり、毎年会合を開いて決定を行っているが、67回のハンザ同盟の日（ハンゼタージ）のうち43回は地理的に有利なリューベックで開催されました。その結果、ハンザ同盟の先導役を務めることになったのです。その権力の中枢は、[GetYear]年に建てられた市庁舎で、同盟に関する事項の中央集会と審議場として機能しています。最も有名なゴシック様式の煉瓦造りの建築物の一つです。その印象的な前面はまるでおとぎ話のお城のようです。この建物の形状は三世紀に渡って決められてきました。1226年から今日に至るまで、次々と新しい要素が加えられ、砂岩の拱廊に耐風性を高めるための円形の穴が特徴的な前面のかさ上げ、出窓や印象的な大階段などといった改造や拡張が行われてきました。"
+ flavor_hsa.10.d:1 "リューベックは地理的に恵まれた位置にあるため、ハンザ同盟の商人による年次総会の大部分はこの都市で開催されます。そのため、私たちは連主として、同盟全体の進むべき道を指導し、決定する立場にあります。[GetYear]年に建てられた市庁舎は、同盟に関する事項の中央集会と審議場として機能しています。その印象的な建築と壮麗さは、私たちの都市の重要性とハンザ同盟全体の豊かさの証となるでしょう。"
  flavor_hsa.10.a:0 "双方の当事者は裁判官の前で審理を待つ。"
  flavor_hsa.11.t:0 "都市リューベックの門"
- flavor_hsa.11.d:0 "世界的に有名なホルステン門（ホルステンター）が、単一の門ではないことはあまり知られていません。実は住民とその財産を守るために、長い時間をかけて増築された一連の要塞なのです。特にホルステン門は三層に別れています。内門、中門、そして外門です。それぞれが火薬や攻城兵器の進歩に対応できるよう建設されてますので、最新鋭の要塞を増やしたことは間違いなく適切であり、私たちの富を守るための健全な投資であることが証明されるでしょう。\n\nブルク門は中世時代のリューベックの城壁にあった四門の中で最も古い門です。リューベックの歴史的な旧市街地の北端に位置する大ブルク通りの終点で、後期ゴシック様式で建てられたその城門を見つけることができるでしょう。より有名なホルステン門に加え、ブルク門は都市リューベックの要塞群の中で2番目に大きな城門です。リューベック城門は、1227年に城の修道院へと改築されたトラヴェ川の上流にある旧リューベック城にその名を由来しています。"
+ flavor_hsa.11.d:1 "リューベックのような交易の中で重要な都市は、大量の富を蓄積することになるため、周囲の貪欲な国々から注目されることになります。そのため、城壁の存在は必要不可欠というだけでなく、都市そのものの存在に欠かせないものとなるのです。幸いなことに、私たちは都市と富の安全を確保する義務を怠っておらず、都市を取り囲む印象的な要塞はその証です。この都市を取り囲む複数の城壁と城門は、富を奪おうと攻撃してくる者がいないことを保証してくれます。"
  flavor_hsa.11.a:0 "敵がたじろぎますように！"
  flavor_hsa.12.t:0 "重商主義の理論"
- flavor_hsa.12.d:0 "重商主義とは、政府が国際交易を規制することで富を生み出し、国力を強化することを提唱している経済理論です。商人と政府が協力して貿易赤字を減らし、黒字を生み出します。経済ナショナリズムの一形態である重商主義は、企業や軍事、国家の成長のために資金を提供します。国内産業を保護する交易政策を提唱する重商主義では、政府は生産要素の私的所有者を強化します。\n\nこれら生産の四要素とは、商魂、資本財、天然資源、労働力です。重商主義は独占を確立し、非課税の地位を与え、特別優遇の産業に給金を与えました。輸入品には関税をかけます。また、熟練労働者、資本、道具の移動は禁止とします。外国企業を助けるようなことは一切許しません。その代わりに、企業は海外進出で得た富を自国政府に還流させます。その税金で国家の成長と政治力を高めます。"
+ flavor_hsa.12.d:1 "重商主義とは、16～18世紀にかけてヨーロッパで広まった経済理論であり、その実践であった。主に輸出による有利な貿易収支を通じて富を蓄積することを重視しており、政府は関税や補助金などのさまざまな措置を通じて、積極的に輸出を促進し、輸入を抑制した。その目的は、金銀を蓄積し、強力な国内産業を築く一方で、外国との競争を排除することによって、国家の富と権力を増大させることにあった。"
  flavor_hsa.12.a:0 "世の中金だ！"
  flavor_hsa.13.t:0 "ハンザのコグ船"
- flavor_hsa.13.d:1 "ハンザは海上輸送にコグと呼ばれる船を使用していました。それは一本の帆柱と四角い帆を持つ、大きい輸送船でした。船尾に舵があり、平底であったため、干潮でも航海可能でした。ノルドの長艇とは違い、より経済的な使用ができました。コグ船は少人数の乗組員で最大90トンまでの比較的大きな貨物を輸送することができました。当時としては比較的早く、安価に生産されました。\n\nより大きな貨物に対して従来よりも安く、より少ない乗員で輸送することができました。このことが、この形状の帆船の成功要因です。長さ15〜25m、幅5〜8m、型深さ3〜5mと、色々な大きさのコグ船がありました。コグ船の積載量の測定は「ラスト」と呼ばれる単位が用いられ、2トン相当を意味しました。これは馬4頭で引く馬車の容量に相当します。50ラストの小コグ船は、200頭の馬が引く50台の荷馬車が延々と続くのと同じ貨物を運ぶことができました。その2倍おおきいコグ船もありました。キャッスル（船尾）からは周囲をよく見ることができました。竜骨がないので、干潮時には地面に落ちることもあったがために航行にも制約がありました。コグ船は風に乗るだけであり、風と交差することはできません。"
+ flavor_hsa.13.d:2 "商取引の冒険を円滑に進めるためには、商品を運ぶための適切なインフラと乗り物が必要です。そこで、交易のために、1本のマストと四角い帆を持つかさばる貨物船、ハンザ・コグを採用することにします。この船は財力と豊かさの象徴として、シーレーンを横断し、多くの港を結ぶのです！"
  flavor_hsa.13.a:0 "自国の交易品と商人を輸送する素晴らしい船舶だな！"
  flavor_hsa.14.t:0 "アドラー・フォン・リューベック"
- flavor_hsa.14.d:0 "アドラー・フォン・リューベック（リューベックの鷲）は、デア・グローセ・アドラーやルブスチェア・アドラーとも呼ばれ、16世紀のドイツのハンザ同盟都市リューベックの軍艦です。アドラー・フォン・リューベックは全長78.30m、排水量2-3,000トンで、当時の世界最大級の艦船の一つでした。北方七年戦争の際に、バルト海や北海の商船隊を護衛するためにリューベックが建造した戦争用のガレオン船です。\n\nアドラーが見せたこのような海上能力は、必ずや宿敵の羨望の的となることでしょう。その正統性と無敵の雰囲気を守ることは、自国がその栄光ある名声の恩恵を受け続けることを意味します。"
+ flavor_hsa.14.d:2 "アドラー・フォン・リューベック号は、私たちの艦隊が見たこともないような大きな船で、海軍の誇りとなるでしょう。最も海軍力のある敵でさえも、優雅に海に飛び出すリューベックの鷲の大きさと火力に震え上がるでしょう！\n\nアドラーが見せたこのような海上能力は、必ずや宿敵の羨望の的となることでしょう。その正統性と無敵の雰囲気を守ることは、自国がその栄光ある名声の恩恵を受け続けることを意味します。"
  flavor_hsa.14.a:0 "大砲音で敵の悲鳴を黙らせてやろうぞ！"
  flavor_hsa.16.t:0 "ハンザの交易特権"
  flavor_hsa.16.d:0 "現在では私たちのしっかりと手中の中に収まっている都市ダンツィヒは、かつて強大なハンザ同盟の下でリューベックに位置する交易中心地でした。その後、同盟は数多の要因で転落の一途を辿り、バルト海やその先の地域でその力を試されてきました。これらの欠点があるにも関わらず、ドイツ沿岸やバルト海沿岸における近年の発展により、ハンザ同盟の地位が回復しつつあります。もう一度ハンザの有力商人たちが、有利な条件を携えてダンツィヒへとやって来ました..."
@@ -4373,12 +4373,12 @@
  flavor_hsa.20.d:0 "海上部門における木材と労働力の規制は、かつてわが大共和国の生命線でした。しかし、15世紀初頭には、造船とそれに関割る交易品の独占権を失い、ゆえに海上そのものに対する確固たる支配力を失ってしまいました。数多くの挫折を味わったにもかかわらず、ハンザはここ最近、海軍用品の交易において長年失っていた力を再発見し、自国と海外の市場を再び掌握してきています。このことが私たちの将来に対して何を意味しているかは、はっきりと語ることができませんが、自国の都市が原点に立ち返るという前向きな発展は、間違いなく豊かな時代が訪れる兆候です！"
  flavor_hsa.20.a:0 "もう一度木材の達人となるぞ！"
  flavor_hsa.21.t:1 "ゲオルク・ギーゼ－有名商人"
- flavor_hsa.21.d:0 "ジョージ（またはゲオルク）・ギーゼは著名なハンザ商人で、少なくとも12年間はロンドンのスティールヤードで一族の商館を管理していました。アルブレヒト・ギーゼ（別の著名で強力なハンザのダンツィヒ市長でロンドン商人）の息子としてギーゼ家に生まれ育ち、当時ヨーロッパ交易の中心地であったロンドンに商館を構えました。ハンザのロンドン支部であるスティールヤードにあったギーゼ家の商館は、ハンザと外国の商人が集まる居留地の一部でした。\n\nそこでジョージは商いの技術を学び、優秀な成績を収め、次々と学院を卒業していきました。最終的に彼は数十年にわたりスティールヤードの運営長を務め、有能な管理者と巧みな外交官であることを証明することになります。"
+ flavor_hsa.21.d:2 "交易が盛んな国であるため、価値あるモノや人の移動が盛んです。そのような著名な人物の一人がゲオルク・ギーゼ、ダンツィヒ出身の有能な商人です。彼のロンドンでの事業は大成功を収め、私たちのロンドン市場における利益と影響力は彼のおかげで大きく拡大しました。彼がロンドンから戻ってきた今、私たちは彼の大きな潜在能力をより直接的な形で活用することができそうです。"
  flavor_hsa.21.a:0 "彼は我が国民を偉大なるものへと導くだろう。"
  flavor_hsa.21.b:0 "彼の手腕は素晴らしいのだが、共和制の流儀には従わねばならん..."
  flavor_hsa.21.c:0 "彼の能力は計り知れん！"
  flavor_hsa.22.t:0 "アルブレヒト・モルデンハウアー"
- flavor_hsa.22.d:0 "ハンザ同盟は、強大な神聖ローマ帝国の領土とその外に広がる多くの商人たちの集まり、いや、むしろ緩やかな同盟です。多くの商人が行き交い、ある者は伝説的な財を築き、歴史の一葉を飾り、またある者はそれほどでもありません。\n\nしかし、都市リューベックからの天才商人、アルブレヒト・モルデンハウアーほど歴史に名を残した者はいないでしょう。アルブレヒトはスウェーデンやノルウェーとの交易発展に影響を与え、ベルゲンやストックホルムの彼の息子のヴォルフ・モルデンハウアーとブルクハルト・モルデンハウアーは現地のハンザ同盟活動の指導者となりました。"
+ flavor_hsa.22.d:1 "ハンザ同盟は、強大な神聖ローマ帝国の領土とその外に広がる多くの商人たちの集まり、いや、むしろ緩やかな同盟です。多くの商人が行き交い、ある者は伝説的な財を築き、歴史の一葉を飾り、またある者はそれほどでもありません。\n\nしかし、都市リューベックからの天才商人、アルブレヒト・モルデンハウアーほど歴史に名を残した者はいないでしょう。彼はスウェーデンやノルウェーとの交易発展に欠かせない人物であり、彼のおかげで両国を流れる物資は大幅に増加しました。彼のような才人を私たちは間違いなく利用できます。"
  flavor_hsa.22.a:0 "その商才には驚くばかりだ。"
  flavor_hsa.23.t:0 "伯爵戦争"
  flavor_hsa.23.d:0 "デンマークの情勢ですが、昨今の惨状を見るに悲惨です。薄弱な君主の宮廷は小貴族が王権とその行使権をめぐって争い、ばらばらに分裂しています。最近、デンマークの宮廷に反乱分子の使者と称する外国の諜報員が接触してきました。彼らは暴君の宗主に対抗するため、一定金額を寄付すれば、彼らの企てを支援できると持ちかけてきています。何にせよ、これはデンマークの政治に紛れ込み、彼らの王権を弱める好機です。"
@@ -4388,7 +4388,7 @@
  flavor_hsa.24.d:0 "15世紀前半のハンザ同盟の没落には確かに多くの要因がありました。病気に不幸に神の報に貴金属飢饉にと、自国の宮廷はかつての栄華を失い、ドイツ都市をはじめとする数百の商人による強力な商業連合体としての立ち位置を失ってしまっています。それに代わって、オランダ宮廷の奸商たちが自国の立ち位置を奪い、ヨーロッパの市場に対する影響力の点で、私たちを凌駕しようとしています。このような行動は、正当な戦争の根拠となるに違いなく、自国が避けれぬ崩壊の危険を冒すといけないので、これらホラントの小国を変わりにその座に就かせねばなりません。"
  flavor_hsa.24.a:0 "これで奴らの首は飛ぶであろう！"
  flavor_hsa.25.t:0 "若ハンス・ホルバイン"
- flavor_hsa.25.d:0 "ハンス・ホルバイン（若）は、北のルネサンス様式のドイツ人画家及び版画家だった16世紀最大の肖像画家の一人だ。宗教画や風刺画、宗教改革の宣伝活動も手がけ、本の装丁の歴史にも大きく貢献した。後期ゴシック派の優れた画家である父の老ハンス・ホルバインと区別するために「若」と呼ぶ。\n\n彼はアウグスブルクに生まれ、若手時代はバーゼルを中心に活動した。当初は壁画や宗教画、ステンドグラス窓の意匠に書籍の印刷を手がけた。肖像画も描き、ロッテルダムの人文主義者デジデリウス・エラスムスの肖像画で世界に知られた。宗教改革がバーゼルにまで及ぶと、伝統的な宗教的後援者に仕え続ける一方で改革派も顧客とした。彼の後期ゴシック様式はイタリアやフランス、ネーデルラントの芸術動向やルネサンス期の人文主義でさらに豊かとなり、彼独自の複合的美学が生まれた。\n\n1526年、ホルバインはエラスムスの推薦からイギリスに渡った。トマス・モアの人文主義団体に歓迎され、すぐに高い評価を得た。バーゼルに四年戻った後、1532年、アン・ブーリンとトマス・クロムウェルの庇護下でイングランドでの活動を再開する。1535年にはイングランド王ヘンリー8世の国王画家となった。肖像画や祝祭の装飾、宝飾品や皿など貴重品の意匠を手がけた。王族や貴族の肖像画は、ヘンリーがイングランド国教会至上主義を主張した時代の宮廷の記録だ。\n彼の芸術は初期から高く評価された。フランスの詩人で改革者のニコラス・ブルボン（老）は、彼を当時の典型的な褒め言葉を使って「現代のアペレス」と称した。流派を作らなかったので、美術史では偉大なる「一代限り」と評される。彼の死後、作品の一部は失われたが多くが収集され、19世紀には偉大な肖像画家の一人として認知された。最近の展覧会では彼の多才ぶりが際立つ。複雑な宝飾品から不朽のフレスコ画まで色々な意匠を生んだ。\n\n彼の芸術は精緻に描かれたので、写実主義者とも呼ばれた。彼の肖像画は当時から有名で、エラスムスやモアといった当時の有名人が彼の目を通して今日に描かれている。しかし、彼は決して外見だけにこだわった訳ではない。彼の芸術には象徴性、暗示性、逆説性が織り込まれ、研究者を魅了してやまない。美術史家のエリス・ウォーターハウスは彼の肖像画を「表現の確かさと経済性、人物への洞察、豊かさと純粋さを兼ね備えた様式は比類ない」と評した。"
+ flavor_hsa.25.d:1 "ルネサンスのような重要な歴史的出来事の波紋をたどるのは、実に魅惑的な眺めである。ハンス・ホルバインはドイツの画家・版画家で、北方ルネサンス様式で活躍し、16世紀にはこの様式の最も著名な人物の一人となった。当初はバーゼルを中心に活動し、後期ゴシック様式とルネサンス様式を融合させて独自の美学を築いた。トマス・モアら人文主義者との交友を通じてイングランドで認知された後、ホルバインはヘンリー8世の王の画家となり、写実性と深遠な象徴主義の両方を捉えた驚くべき肖像画を制作した。その精密さと深みで名高い芸術は、学者たちを魅了し続け、洞察に満ちた人物描写と優雅なスタイルで、肖像画の最高峰とみなされている。"
  flavor_hsa.25.a:0 "北ヨーロッパのルネサンス様式の隆盛は彼のような偉大な人物がいたからだ！"
  flavor_hsa.26.t:0 "新女王の戴冠"
  flavor_hsa.26.d:0 "15世紀後半、自国商人たちはヨーロッパの多くの交易中心地での独占を維持するのに苦労し（しばしば失い）、我が共和国は息絶えようとしていると多くの者たちが述べていました。幾度かの挫折や敵の策略にもかかわらず、自国は頂点に立つだけでなく、自国の貿易同盟の価値を高めることにも成功しました。ノルウェーからバルト海に至るまで、最重要市場を支配し、否定派が間違っていることを証明し、我が偉大なる国家の地位をかつてない高みにまで押し上げました！これこそドイツ最強の女王の戴冠式です！ハンザ万歳！"
@@ -4827,3 +4827,4 @@
  hsa_modern_drilling_techniques_modifier:0 "近代的な訓練の実践"
  hsa_hanseatic_military_conduct_modifier:0 "ハンザ同盟の軍事指揮"
  estates_fund_industrialization_tt:0 "ランダムで開発度が§Y10§!ある領有州の1州に§Y工場§!が建設されます。"
+ CANNOT_DECLARE_WARS_TEUTONS_HRE:0 "AIとして他の神聖ローマ帝国領邦に宣戦布告することはできません"
