--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -289,7 +289,7 @@
  ligurian:0 "リグリア"
  lithuanian:0 "リトアニア"
  leonese:0 "レオン"
- lombard:0 "ロンバルド"
+ lombard:0 "ロンバルディア"
  lowland_scottish:0 "ローランド"
  luri:0 "ロル"
  madagasque:0 "マダガスカル"
@@ -314,7 +314,7 @@
  north_american:0 "北アメリカ"
  norwegian:0 "ノルウェー"
  nubian:0 "ヌビア"
- occitain:0 "オクシタン"
+ occitain:0 "オック"
  omani_culture:0 "オマーン"
  oriya:0 "オリヤー"
  pacific:0 "太平洋"
@@ -4390,7 +4390,7 @@
  CORE_SAME_CULTURE:0 "この州は、同じ文化グループなので、中核州として失われることはありません。"
  TOLERANCE_SLIDER:0 "これは$RELIGION$の州に影響するでしょう"
  NO_SUCC_SEPARATE:0 "継承戦争の対象国は個別の和平に署名することはできません。"
- HRE_DISMANTLE_EMPEROR:0 "現皇帝の本国首都である$COUNTRY$の$PROV$を支配する必要があります。"
+ HRE_DISMANTLE_EMPEROR:1 "現皇帝の本国首都である$COUNTRY|Y$の$PROV$を支配する必要があります。"
  HRE_DISMANTLE_ELECTORS:0 "選帝候国$COUNTRY$があなた、又はあなたの従属国によって支配されていません。"
  NOOPENMARKET:0 "この市場は現在、我々の商人に対して閉鎖されています。我々はこれを開くために戦争や外交手段を使うことができます。"
  REVOLTRISK_EFFECT:1 "$WHERE|Y$の不穏度が$VALUE$$DIRECTION$（現在：$CURRENT|R$）\n"
@@ -6012,8 +6012,8 @@
  ATTR_SAFE_RANGE:0 "補給線の範囲内であり、海岸近くの艦隊は損耗を受けることはありません。"
  ATTR_ALLY_WATERS:0 "戦争の同盟国によって支配された海岸近くの艦隊は、損耗を受けることはありません。"
  SHIP_SUPPLY_RANGE:0 "補給船到達範囲"
- HAS_MISSIONARY:0 "$PROVINCE|Y$は有効な宣教師を持っている"
- HAS_NOT_MISSIONARY:0 "$PROVINCE|Y$は有効な宣教師を持っていない"
+ HAS_MISSIONARY:1 "$PROVINCE|Y$は有効な宣教師を持っている"
+ HAS_NOT_MISSIONARY:1 "$PROVINCE|Y$は有効な宣教師を持っていない"
  HAS_COLONIST:0 "は有効な植民者を持っている"
  HAS_NOT_COLONIST:0 "は有効な植民者を持っていない"
  MERCHANT_OWN_COMPETE_CHANCE:0 "国内の商人は機会を競います"
