--- a/source/localisation/emperor_revolutions_l_english.yml
+++ b/source/localisation/emperor_revolutions_l_english.yml
@@ -1,7 +1,7 @@
 ﻿l_english:
  revolution.30.name:0 "[Root.philosopher_dude.GetName]の思想"
  revolution.30.desc:0 "[Root.Monarch.GetName][Root.Monarch.GetTitle]の明らかな弾圧に対して、[university_town.GetName]大学の著名な哲学者である[Root.philosopher_dude.GetName]が行き過ぎた絶対主義に抗議する論文を発表した。残念なことに、この論文には非常に強い説得力があり、知識階級の間では政府政策を批判する際に好んで引用されているようだ。"
- revolution.30.A:0 "彼らを容認する"
+ revolution.30.A:0 "彼を容認する"
  revolution.30.B:0 "奴を逮捕し、本を焼いてしまえ！"
  french_revolution.4.robespierre:0 "恐怖政治の中で共和制の名の下に無数のフランス人が虐殺された。一つの脅威が排除されるとすぐに次の脅威が特定され、浄化された。最近、[Root.Monarch.GetTitle]ロベスピエールは極めて暴力的な演説を行い、その中で彼は公安委員会と一般治安委員会の反逆者を非難し、逮捕を要求した。これにより、革命指導者たちの間では恐怖と怒りが広がっており、またもや自分たちの階級が一掃されるのではないかと恐れている。すでに国民議会は、彼の逮捕を要求し、恐怖政治の行き過ぎを抑制し、共和国に安定を取り戻し、混乱を王政復古の口実にしてはならないという動きをしています。\n\nしかし、ロベスピエールにはまだ多くの支持者がいるようで、我々が迅速に動かなければ、彼を守ろうとすることは間違いないだろう。"
  french_revolution.4.robespierre.A:0 "ロベスピエールを逮捕せよ！"
