--- a/source/localisation/messages_l_english.yml
+++ b/source/localisation/messages_l_english.yml
@@ -159,12 +159,12 @@
  SHAREMAP_SETUP:0 "我々が地方の地図を共有したとき"
  SHAREMAP_HEADER:0 "$MESSENGER$"
  SHAREMAP_1:0 "地図の共有"
- SHAREMAP_2:0 "$MONARCHTITLE$、$RECIPIENT$は我々と"
+ SHAREMAP_2:1 "$MONARCHTITLE$、我々は"
  SHAREMAP_3:0 "$REGION$の地図を"
- SHAREMAP_4:0 "共有しました。"
- SHAREMAP_5:0 "我々は新しく$NUM_PROVS|Y$個の州を知りました。"
- SHAREMAP_6:0 "これには$PRESTIGE$の威信がかかります。"
- SHAREMAP_LOG:0 "$RECIPIENT$から$REGION$地方の地図を受領"
+ SHAREMAP_4:1 "$ACTOR$と共有しました。"
+ SHAREMAP_5:1 "彼らは新しく$NUM_PROVS|Y$個の州を知りました。"
+ SHAREMAP_6:1 "これには$PRESTIGE$の威信がかかったことでしょう。"
+ SHAREMAP_LOG:1 "$RECIPIENT$と$REGION$地方の地図を共有"
  SHAREMAP_BTN1:0 "OK"
  SHAREMAP_BTN2:0 "OK"
  SHAREMAP_BTN3:0 "移動"
@@ -5685,7 +5685,7 @@
  HREDISMANTLEBYUS_HEADER:0 "$MESSENGER$"
  HREDISMANTLEBYUS_1:0 "帝国が解体されました！"
  HREDISMANTLEBYUS_2:1 "我々は神聖ローマ帝国を解体しました。"
- HREDISMANTLEBYUS_3:0 "このことは我々に威信§G$VAL$§!をもたらします。"
+ HREDISMANTLEBYUS_3:1 "$TEXT$"
  HREDISMANTLEBYUS_LOG:0 "神聖ローマ帝国解体"
  HREDISMANTLEBYUS_BTN1:0 "OK"
  HREDISMANTLEBYUS_BTN2:0 "OK"
@@ -6762,10 +6762,10 @@
  DRILL_SKILL_GAIN_1:0 "閣下"
  DRILL_SKILL_GAIN_2:0 "我々の努力が報われています。"
  DRILL_SKILL_GAIN_3:1 "$ARMY$の訓練中、"
- DRILL_SKILL_GAIN_4:0 "$GENERAL$は"
+ DRILL_SKILL_GAIN_4:1 "$GENERAL$は"
  DRILL_SKILL_GAIN_5:1 "$SKILL$（$FIRE$£military_view_icon_fire£/ $SHOCK$£military_view_icon_shock£/ $MANEUVER$£military_view_icon_maneuver£/ $SIEGE$£military_view_icon_siege£）を獲得しました。"
  DRILL_SKILL_GAIN_6:0 "この新しい技能は、我々の戦争に勝利をもたらします！"
- DRILL_SKILL_GAIN_LOG:0 "$GENERAL$、$SKILL$を獲得"
+ DRILL_SKILL_GAIN_LOG:1 "$GENERAL$、$SKILL$を獲得"
  DRILL_SKILL_GAIN_BTN1:0 "OK"
  DRILL_SKILL_GAIN_BTN2:0 "OK"
  DRILL_SKILL_GAIN_BTN3:0 "移動"
@@ -6946,10 +6946,10 @@
  FLAGSHIP_SKILL_GAIN_1:0 "我が君"
  FLAGSHIP_SKILL_GAIN_2:0 "我々の努力が報われています。"
  FLAGSHIP_SKILL_GAIN_3:1 "$FLAGSHIP$上で、"
- FLAGSHIP_SKILL_GAIN_4:0 "$ADMIRAL$は、"
+ FLAGSHIP_SKILL_GAIN_4:1 "$ADMIRAL$は、"
  FLAGSHIP_SKILL_GAIN_5:1 "$SKILL$（$FIRE$£military_view_icon_fire£/ $SHOCK$£military_view_icon_shock£/ $MANEUVER$£military_view_icon_maneuver£）。"
  FLAGSHIP_SKILL_GAIN_6:0 "この新しい技能は、我々の戦争に勝利をもたらします！"
- FLAGSHIP_SKILL_GAIN_LOG:0 "$ADMIRAL$、$SKILL$を獲得"
+ FLAGSHIP_SKILL_GAIN_LOG:1 "$ADMIRAL$、$SKILL$を獲得"
  FLAGSHIP_SKILL_GAIN_BTN1:0 "OK"
  FLAGSHIP_SKILL_GAIN_BTN2:0 "OK"
  FLAGSHIP_SKILL_GAIN_BTN3:0 "移動"
@@ -7127,3 +7127,4 @@
  REMOVESEATINPARLIAMENT_BTN2:0 "OK"
  REMOVESEATINPARLIAMENT_BTN3:0 "移動"
  REMOVESEATINPARLIAMENT_MAP:0 "議席はく奪"
+ fleeing_serfs_tt:0 "国境の州の1つで開発度がランダムに§G1§!付与されます"
