--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -150,12 +150,12 @@
  MANUFACTORIES_AND_INDUSTRIALIZATION:0 "Manufactories§! and §YIndustrialization"
  SIDETRUCEENDS_TITLE:0 "Truce Ended"
  SIDETRUCEENDS_SETUP:0 "When a one-sided truce ends between your nation and another."
- SIDETRUCEENDS_HEADER:0 "Our Chancellor reports"
- SIDETRUCEENDS_1:0 "One-sided Truce Expired"
- SIDETRUCEENDS_2:0 "$OUR_THEIR$ truce with $US_THEM$ ended."
- SIDETRUCEENDS_5:0 "$WE_THEY$ can now declare war on $US_THEM$ without additional penalties."
- SIDETRUCEENDS_6:0 "This was a one-sided truce."
- SIDETRUCEENDS_LOG:0 "The truce between $ACTOR$ and $RECIPIENT$ has ended."
+ SIDETRUCEENDS_HEADER:0 "宰相からの報告"
+ SIDETRUCEENDS_1:0 "片側だけの停戦切れ"
+ SIDETRUCEENDS_2:0 "$OUR_THEIR$の$US_THEM$との停戦が終了しました。"
+ SIDETRUCEENDS_5:0 "$WE_THEY$は今、追加の罰則なしに$US_THEM$に宣戦布告することができます。"
+ SIDETRUCEENDS_6:0 "これは片側だけの停戦でした。"
+ SIDETRUCEENDS_LOG:0 "$ACTOR$と$RECIPIENT$の間の停戦は終了しています。"
  SIDETRUCEENDS_BTN1:0 "OK"
  SIDETRUCEENDS_BTN2:0 "OK"
  SIDETRUCEENDS_BTN3:0 "移動"
