Save/Update files [ci skip]

--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -652,7 +652,7 @@
  algiers_area:0 "アルジェ"
  algiers_area_name:0 "アルジェ"
  algiers_area_adj:0 "アルジェ"
- hautes_plaines_area:0 "高地平野"
+ hautes_plaines_area:0 "オープラトー"
  hautes_plaines_area_name:0 "ティトリ"
  hautes_plaines_area_adj:0 "ティトリ"
  ouled_nail_area:0 "ウーレド・ナイル"
