--- a/source/localisation/flavor_events_l_english.yml
+++ b/source/localisation/flavor_events_l_english.yml
@@ -3649,7 +3649,7 @@
  flavor_son.2.d:0 "偉大な王アスキアは、宗教学校や天文台を開いた。彼は交易を奨励し、効率的な官僚制を確立した。彼は行政に才能があり、正義に基づいた統治を行った。彼は運河を建設して農業を強化し、敵を征服した。"
  flavor_son.2.a:0 "これは永遠に続くだろう…"
  flavor_son.3.t:0 "スーダン年代記"
- flavor_son.3.d:0 "ソンガイ帝国の最も重要な記録であるスーダン年代記は、1655年頃にアブド・アル=ラフマン・アル・サディによって書かれた。それはマリ、ソンガイ、トゥアレグの初期史についての簡単な歴史を述べているが、年代記の主要部分は15、16世紀のソンガイの歴史を描いている。また、ジェンネとトンブクトゥの学者と聖者の伝記も掲載されている。"
+ flavor_son.3.d:0 "ソンガイ帝国の最も重要な記録であるスーダン年代記は、1655年頃にアブド・アル＝ラフマン・アル・サディによって書かれた。それはマリ、ソンガイ、トゥアレグの初期史についての簡単な歴史を述べているが、年代記の主要部分は15、16世紀のソンガイの歴史を描いている。また、ジェンネとトンブクトゥの学者と聖者の伝記も掲載されている。"
  flavor_son.3.a:0 "良い知らせだ！"
  flavor_eth.1.t:0 "ペロ・ダ・コヴィリャン"
  flavor_eth.1.d:0 "奇妙な男が我々の海岸にやって来たが、外国人が通常我々に向かう紅海の航路からではない。彼は、岬の外からの航海の一部であると主張している。我々の知る限りではこれまでに試みられたことのない航海である。彼の祈りは以前に見たものとは異なるが、彼は仲間のキリスト教徒の君主からの挨拶をもたらす。この男をどう扱うべきだろうか？"
