--- a/source/localisation/tmm_l_english.yml
+++ b/source/localisation/tmm_l_english.yml
@@ -2095,8 +2095,8 @@
  MODIFIER_SAILORS_COST:0 "水兵コスト"
  MODIFIER_SHIP_TRADE_POWER_MODIFIER:0 "船の交易力補正"
  MODIFIER_CAN_TRANSPORT_UNITS:0 "ユニットを輸送可能"
- MODIFIER_SPECIAL_UNIT_COST_MODIFIER:0 "Special Unit Cost Modifier"
- MODIFIER_SPECIAL_UNIT_MANPOWER_COST_MODIFIER:0 "Special Unit Manpower Cost Modifier"
+ MODIFIER_SPECIAL_UNIT_COST_MODIFIER:0 "特殊ユニットのコスト補正"
+ MODIFIER_SPECIAL_UNIT_MANPOWER_COST_MODIFIER:0 "特殊ユニットの人的資源補正"
  HAS_ECLIPSED_TRIGGER:0 "Has eclipsed $NAME|Y$"
  NOT_HAS_ECLIPSED_TRIGGER:0 "Has NOT eclipsed $NAME|Y$"
  HAS_BEEN_ECLIPSED_BY_TRIGGER:0 "Has been eclipsed by $NAME|Y$"
