Save/Update files [ci skip]

--- a/source/localisation/areas_regions_l_english.yml
+++ b/source/localisation/areas_regions_l_english.yml
@@ -137,9 +137,9 @@
  calabria_area:0 "カラブリア"
  calabria_area_name:0 "カラブリア"
  calabria_area_adj:0 "カラブリア"
- apulia_area:0 "プッリャ"
- apulia_area_name:0 "プッリャ"
- apulia_area_adj:0 "プッリャ"
+ apulia_area:0 "アプリア"
+ apulia_area_name:0 "アプリア"
+ apulia_area_adj:0 "アプリア"
  emilia_romagna_area:0 "エミリア＝ロマーニャ"
  emilia_romagna_area_name:0 "エミリア"
  emilia_romagna_area_adj:0 "エミリア"
