--- a/source/localisation/goose_1_35_l_english.yml
+++ b/source/localisation/goose_1_35_l_english.yml
@@ -134,7 +134,7 @@
  PARLIAMENT_SEATS_TOOLTIP:0 "$PROVINCE|Y$ has a parliament seat."
  SPECIAL_UNIT_FORCELIMIT_MODIFIER_LABEL:0 "This number is further multiplied by $VAL|+%$ owning to:\n$MODIFIER$"
  TRADE_NODE_INCOME_EFFECT:0 "$NODE|Y$交易ノードから$AMOUNT|0$ヵ月分の収入に相当する$VALUE$ダカットを$DIRECTION$。\n"
- GRANT_PRIVILEGE_SHORT:0 "$PRIVILEGE|Y$ will be granted to $ESTATE|Y$ which does the following:"
+ GRANT_PRIVILEGE_SHORT:0 "$PRIVILEGE|Y$が$ESTATE|Y$に与えられ、以下があります："
  REVOKE_PRIVILEGE_SHORT:0 "$PRIVILEGE|Y$ will be revoked from $ESTATE|Y$ which does the following:"
  PRIVILEGE_EFFECTS:0 "§YEffects:§!"
  PRIVILEGE_TO_REVOKE:0 "§YRevoke conditions:§!"
