Save/Update files [ci skip]

--- a/source/localisation/EU4_l_english.yml
+++ b/source/localisation/EU4_l_english.yml
@@ -1763,7 +1763,7 @@
  ACCEPTED_CULTURE_SLOTS_DESC:0 "$MAX|Y$のうち$FREE|Y$の空き文化の登用スロットを持っています。\n文化を登用するには、登用されていない文化の§Y文化の登用§!ボタンをクリックします。\nスロットの数は以下によって計算されます：\n"
  ADD_ACC_CULTURE_TOO_MANY:0 "我々はすでに$CURR|Y$の文化を登用しており、我々のアイデアと技術では最大$MAX|Y$の登用文化しか持つことはできないため、これ以上文化を登用することができません。"
  SET_PRIMARY_CULTURE_NO_POINTS:0 "主要文化を転向するには$COST|Y$の外交力が必要ですが、$VAL|Y$しか持っていません！"
- SET_PRIMARY_CULTURE_COST:0 "主要文化を$NAME|Y$に転向すると$COST|Y$の外交力が必要です。"
+ SET_PRIMARY_CULTURE_COST:0 "主要文化を$NAME|Y$に転向するには$COST|Y$の外交力が必要です。"
  SET_PRIMARY_CULTURE_WRONG_TYPE:0 "$NAME|Y$は、受容文化ではなく、$GROUP|Y$文化グループに属する文化でもないため、それを主要文化とすることはできません。"
  SET_PRIMARY_CULTURE_TOO_WEAK:0 "$NAME|Y$文化を主要文化とするにはあなたのステートで少なくとも§Y$NEED$%§!の開発度が必要ですが、§Y$VAL$%§!しかありません。"
  ADD_ACCEPTED_CULTURE_NO_POINTS:0 "主要文化を受容文化とするには少なくとも$COST|Y$の外交力が必要ですが、$VAL|Y$しか持っていません。"
@@ -4504,7 +4504,7 @@
  CTPOS_NOT_OUR_PROVINCE:0 "交易所を作成するには、$NAME|Y$を所有し、支配する必要があります。"
  CONFIRCREATETRADEPOST:0 "交易所を作成"
  CONFIRCREATETRADEPOSTTEXT:0 "$NAME$に交易所を作成すると、以下の影響を及ぼします：\n$EFFECTS$"
- CONFIRCREATETRADEPOSTCOST:0 "これには$COST|Y$の$TYPE$点が必要です。"
+ CONFIRCREATETRADEPOSTCOST:0 "これには$COST|Y$の$TYPE$点がかかります。"
  CTPOS_DO:0 "交易所の作成は§Y$COST$§!の$TYPE$点が必要であり、以下の影響を及ぼします：\n$EFFECTS$"
  CTPOS_NOTMERCHREPUB:0 "商人共和国のみ、交易所を作成できます。"
  NOT_FOREIGN_HEIR:0 "後継者は外国人ではない"
