--- a/source/localisation/origins_l_english.yml
+++ b/source/localisation/origins_l_english.yml
@@ -1093,7 +1093,7 @@
  son_invite_foreign_scholars_ct:0 "首都が§Yサヘル§!地方、§Yニジェール§!地方、§Yギニア§!地方のいずれにもなく、国教が§Y[Root.Religion.GetName]§!であり、§Y[Root.GetName]§!の同盟国である国家が存在する。"
  son_invite_foreign_scholars_bt:0 "[Root.GetName]は、外交要求せずに§Y学者§!を招聘できるようになる。\n"
  son_invite_foreign_scholars_at:0 "学者の種類は、このミッションの達成時点で招聘していた学派に依ります。"
- son_invite_foreign_scholars_tt:0 "首都が§Yサヘル§!地方、§Yニジェール§!地方、§Yギニア§!地方のいずれにもない\n  §Y[Root.Religion.GetName]§!である\n  §Y[Root.GetName]§!への外交評価が§Y150§!以上"
+ son_invite_foreign_scholars_tt:0 "首都が§Yサヘル§!地方、§Yニジェール§!地方、§Yギニア§!地方のいずれにもない\n　§Y[Root.Religion.GetName]§!である\n　§Y[Root.GetName]§!への外交評価が§Y150§!以上"
  son_power_to_the_ulema_title:0 "[Root.GetClergyName]にさらなる力を"
  son_power_to_the_ulema_desc:1 "我が[Root.GovernmentName]は、宗教的統一と啓蒙の方向へと向かっている。しかし、まだやるべきことが山のようにある。[Root.GetClergyName]が自国の神聖な法を管理し、異教徒の改宗を監督しているが、自政府に制限を課されている。彼らが法の創造の進歩を進めるためには、もっと自由と特権を与えるべきである。"
  son_convert_west_africa_title:0 "西アフリカの改宗"
@@ -1255,8 +1255,8 @@
  zim_zanzibar_greatest_market_desc:0 "交易が繁盛し、国庫が満たされていっているが、不十分である。豊かさにおいて、過去のと現在ではまだいい勝負だ。これを変える必要がある！東アフリカ沿岸部のダカットの流れを制御し、重要な交易中心地を独占し、インドやアジアからの外来交易品をできるだけ多く自国市場へ誘導すべきだ。"
  ZIM_TRADE_DOMINANCE:0 "ムタパ交易の支配"
  zim_zanzibar_greatest_market_tt:2 "富の流れの制御に成功したため、[Root.GetName]は極東市場での存在感を取り戻した。\n[Root.GetName]は、ゲーム終了時まで、§Yアデン湾§!、§Yザンジバル§!、§Y喜望峰§!、§Yグジャラート§!、§Yコロマンデル§!、§Yマラッカ§!、§Y広州§!、§Y杭州§!、§Y北京§!で§Yムタパ交易の支配§!（交易力：§G15.0§!）を獲得する。"
- zim_zanzibar_greatest_market_at:0 "§Y喜望峰§!、§Yザンジバル§!、§Yアデン湾§!のいずれかが世界で最も価値の高い交易ノードであり、§Y[Root.GetName]§!が当該交易ノードで最大の交易力を有する国家である。"
- zim_zanzibar_greatest_market_bt:1 "§Yグジャラート§!、§Yコロマンデル§!、§Yマラッカ§!!のいずれかにおいて、§Y[Root.GetName]§!が当該交易ノードで最大の交易力を有する国家であるか、もしくは§Y10%§!以上の交易力を有する。"
+ zim_zanzibar_greatest_market_at:0 "§Y喜望峰§!、§Yザンジバル§!、§Yアデン湾§!のいずれかが世界で最も価値の高い交易ノードであり、§Y[Root.GetName]§!が当該交易ノードで最大の交易力を持つ。"
+ zim_zanzibar_greatest_market_bt:1 "§Yグジャラート§!、§Yコロマンデル§!、§Yマラッカ§!!のいずれかにおいて、§Y[Root.GetName]§!が§Y10%§!以上もしくは最大の交易力を持つ。"
  zim_cults_title:0 "ムワリ信仰"
  zim_cults_desc:1 "ムウェネムタパは自国の宗教と国家の神聖なる支配者であるが、その支配者は今でも全能なるムワリに服従している。ムワリは祖霊を支配する存在であり、創造、幸運など様々な側面を持つ神である。その名を神殿にて称えることが必要だ。"
  zim_council_title:0 "評議会の均衡"
@@ -2058,8 +2058,8 @@
  west_africa_bilad_sudan_trade_title:0 "ビラード･アッスーダーン交易"
  west_africa_bilad_sudan_trade_desc:0 "ここ数十年の交易増加に伴って、この地方全域でいくつかの重要な中心地が発展してきた。トンブクトゥは北への玄関口、カネム・ボルヌは東部の交易を司り、ベニンは南部海岸の主要な地だ。今、これらの土地とそこを通過する交易を司ることが必要だ。"
  zan_centralize_trade_at:1 "§Y[Root.GetName]§!が以下のいずれかの交易ノードにおいて§Y85%§!の交易力を有している：§Yザンジバル§!、§Y喜望峰§!、§Y象牙海岸§!。"
- zan_centralize_trade_bt:0 "§Y[Root.GetName]§!が§Yザンベジ§!交易ノードもしくは§Yアデン湾§!交易ノードで§Y30%§!の交易力を有しているか、もしくは§Y最大の交易力§!の国家である。"
- zan_centralize_trade_ct:1 "§Y[Root.GetName]§!が§Yグジャラート§!交易ノードもしくは§Yコロマンデル§!交易ノードで§Y10%§!の交易力を有しているか、もしくは§Y最大の交易力§!の国家である。"
+ zan_centralize_trade_bt:0 "§Y[Root.GetName]§!が§Yザンベジ§!もしくは§Yアデン湾§!交易ノードで§Y30%§!もしくは§Y最大の交易力§!を持つ。"
+ zan_centralize_trade_ct:1 "§Y[Root.GetName]§!が§Yグジャラート§!もしくは§Yコロマンデル§!交易ノードで§Y10%§!もしくは§Y最大の交易力§!を持つ。"
  mal_second_branch_mission_title:0 "[Root.GetSelectableMissionTitle]"
  mal_second_branch_mission_desc:0 "[Root.GetSelectableMissionDescription]"
  obj_convert_25_provinces_tooltip:0 "§Y25§!州改宗する（§Y[Root.GetNumConvertedProvinces]§!/§Y25§!）。"
