--- a/source/localisation/text_l_english.yml
+++ b/source/localisation/text_l_english.yml
@@ -662,8 +662,8 @@
  PROTECT_TOO_ADVANCED:1 "彼らは保護国となって恩恵を受けるには技術が進みすぎています。"
  PROTECT_WE_TOO_ADVANCED:1 "我々は保護国となって恩恵を受けるには技術が進みすぎています。"
  PROTECT_CAPITAL_ON_SAME_CONTINENT:0 "我々の首都は、同じ大陸に位置しています。"
- PROTECT_NOT_IN_RANGE:0 "彼らの首都が我々の交易商の範囲内になければなりません。\n  §W（現在の範囲：§Y$CURR$§W 最大範囲：§Y$MAX$§W）"
- PROTECT_WE_NOT_IN_RANGE:0 "我々の首都が彼らの交易商の範囲内になければなりません。\n  §W（現在の範囲：§Y$CURR$§W 最大範囲：§Y$MAX$§W）"
+ PROTECT_NOT_IN_RANGE:0 "彼らの首都が我々の交易商の範囲内になければなりません。\n　§W（現在の範囲：§Y$CURR$§W 最大範囲：§Y$MAX$§W）"
+ PROTECT_WE_NOT_IN_RANGE:0 "我々の首都が彼らの交易商の範囲内になければなりません。\n　§W（現在の範囲：§Y$CURR$§W 最大範囲：§Y$MAX$§W）"
  TRUCEWITH:0 "$LIST$と停戦中です。"
  TRUCEWITHENDS:0 "$COUNTRY$との停戦は§Y$DATE$§!で終了します。"
  INTRADELEAGUEWITH:0 "$LIST$との貿易同盟を形成しています。"
@@ -5659,7 +5659,7 @@
  ADVISOR_LOCATION:0 "$LOCATION$"
  CREATE_ADVISOR:0 "§Y$WHICH$§Wを獲得（$EFFECT$）\n"
  DEFINE_ADVISOR:1 "$CULTURE|Y$文化の$RELIGION|Y$を信仰する$TYPE$の$NAME|Y$が宮廷に加わります。\n（スキル$SKILL|Y$、$EFFECT$）"
- DEFINE_ADVISOR2:3 "$CULTURE_TEXT$$RELIGION_TEXT$$LOCATION$スキル$SKILL|Y$の$TYPE$（$EFFECT$）を得ます。"
+ DEFINE_ADVISOR2:3 "$LOCATION$生まれで$CULTURE_TEXT$$RELIGION_TEXT$スキル$SKILL|Y$の$TYPE$（$EFFECT$）を得ます。"
  improve_key_defensive_position_small_title:0 "$PROVINCENAME$の防御を向上"
  improve_key_defensive_position_small_desc:0 "$PROVINCENAME$の人々は、侵略の可能性に直面して防御が不十分であると懸念している。彼らは要塞が改善されることを心から望んでいる。"
  improve_key_defensive_position_medium_title:0 "$PROVINCENAME$に要塞を建設"
@@ -7506,10 +7506,10 @@
  IMPERIAL_MANDATE_CURRENT_DESC:0 "現在の天命は以下の補正を与えます：\n$MODIFIERDESC$"
  IMPERIAL_MANDATE_BONUS_DESC:0 "§Y50§!を超える天命は以下の規模の補正を与えます：\n$MODIFIERDESC$"
  IMPERIAL_MANDATE_PENALTY_DESC:0 "§Y50§!を下回る天命は以下の規模の補正を与えます：\n$MODIFIERDESC$"
- IMPERIAL_MANDATE_GAIN_DESC:0 "以下によって得られます：\n -安定度が正である。\n -朝貢国を持つ。\n -ステートが繁栄を享受している。"
- IMPERIAL_MANDATE_LOSS_DESC:1 "以下によって失われます：\n -州が荒廃している。\n -国家に汚職がある。\n -借金がある。"
+ IMPERIAL_MANDATE_GAIN_DESC:0 "以下によって得られます：\n -安定度が正である\n -朝貢国を持つ\n -ステートが繁栄を享受している"
+ IMPERIAL_MANDATE_LOSS_DESC:1 "以下によって失われます：\n -州が荒廃している\n -国家に汚職がある\n -借金がある"
  CELESTIAL_EMPEROR_BENEFIT:0 "§Y中華皇帝§!となることは以下の恩恵をもたらします：\n"
- CELESTIAL_EMPEROR_BENEFIT_DESC:0 " -高い天命のボーナス\n -能力主義の仕組みの活用\n -集権化の勅令を制定可能\n -中国への恒久的な主張\n -中華統一の開戦事由\n -近隣諸国への朝貢の強制が可能"
+ CELESTIAL_EMPEROR_BENEFIT_DESC:0 " -高い天命のボーナス\n -能力主義の仕組みの活用\n -集権化の勅令を制定可能\n -中国への恒久的な請求権\n -中華統一の開戦事由\n -近隣諸国への朝貢の強制が可能"
  CELESTIAL_EMPEROR_DIPLOMATIC_ACTIONS_DESC:0 "§Y中華皇帝§!は以下の追加の外交行動を取ることがあります：\n$LIST|Y$"
  CELESTIAL_EMPIRE_NO_DIPLOMATIC_ACTIONS:0 "なし"
  CELESTIAL_EMPIRE_PAST_EMPERORS:0 "先帝："
@@ -8144,9 +8144,9 @@
  vassalize_tributaries_decision_desc:0 "天朝は、その優越性を認める諸朝貢国を宗主国として支配している。多くの蛮族は我々の思想とは相いれないが、中には天朝の偉大さに近付こうと努力している朝貢国もある。我々を喜ばせようとする者たちとの関係を深化させることは、皇帝としての義務であろう。"
  vassalize_tributaries_decision_tt:0 "中華皇帝は天命を使用して朝貢国を直接の属国に深化させることができます。"
  vassalize_tributaries_decision_ct:0 "中華皇帝は天命を使用して朝貢国を直接の属国に深化させることができなくなります。"
- confirm_thalassocracy_a_tt:1 "§Y[Root.GetName]§!が§Y[1298.GetName]§!、§Y[1295.GetName]§!、§Y[341.GetName]§!、§Y[1293.GetName]§!、§Y[1110.GetName]§!で最も強い交易力を持つ。"
- confirm_thalassocracy_b_tt:0 "§Y[Root.GetName]§!が§Y[45.GetName]§!、§Y[1926.GetName]§!、§Y[1269.GetName]§!、§Y[1975.GetName]§!、§Y[33.GetName]§!で最も強い交易力を持つ。"
- confirm_thalassocracy_c_tt:1 "§Y[Root.GetName]§!が§Y[1308.GetName]§!、§Y[137.GetName]§!、§Y[358.GetName]§!、§Y[1320.GetName]§!、§Y[377.GetName]§!で最も強い交易力を持つ。"
+ confirm_thalassocracy_a_tt:1 "§Y[Root.GetName]§!が§Y[1298.GetName]§!、§Y[1295.GetName]§!、§Y[341.GetName]§!、§Y[1293.GetName]§!、§Y[1110.GetName]§!で最大の交易力を持つ。"
+ confirm_thalassocracy_b_tt:0 "§Y[Root.GetName]§!が§Y[45.GetName]§!、§Y[1926.GetName]§!、§Y[1269.GetName]§!、§Y[1975.GetName]§!、§Y[33.GetName]§!で最大の交易力を持つ。"
+ confirm_thalassocracy_c_tt:1 "§Y[Root.GetName]§!が§Y[1308.GetName]§!、§Y[137.GetName]§!、§Y[358.GetName]§!、§Y[1320.GetName]§!、§Y[377.GetName]§!で最大の交易力を持つ。"
  vassalize_tributary_title:0 "属国への深化"
  vassalize_tributary_tooltip:0 "天命を使用し、朝貢国を属国に深化させます。"
  vassalize_tributary_desc:0 "§Y[From.GetName]§!は[Root.GetName]の直接の§Y属国§!となります。これにより§Y[From.GetName]§!が持つ属国関係は全て破棄されます。\n\nこれには§Y0.4 * [From.GetName]の総開発度§!の天命コストがかかります。"
@@ -8163,8 +8163,8 @@
  reichsreform_province:0 "帝国改革"
  reichsregiment_province:0 "帝国統治院"
  landfriede_province:0 "永久ラント平和令"
- confirm_thalassocracy_d_tt:0 "§Y[Root.GetName]§!が§Y[1448.GetName]§!、§Y[4346.GetName]§!、§Y[1334.GetName]§!、§Y[504.GetName]§!、§Y[1340.GetName]§!で最も強い交易力を持つ。"
- confirm_thalassocracy_e_tt:0 "§Y[Root.GetName]§!が§Y[1343.GetName]§!、§Y[1365.GetName]§!、§Y[1361.GetName]§!、§Y[1357.GetName]§!、§Y[1397.GetName]§!で最も強い交易力を持つ。"
+ confirm_thalassocracy_d_tt:0 "§Y[Root.GetName]§!が§Y[1448.GetName]§!、§Y[4346.GetName]§!、§Y[1334.GetName]§!、§Y[504.GetName]§!、§Y[1340.GetName]§!で最大の交易力を持つ。"
+ confirm_thalassocracy_e_tt:0 "§Y[Root.GetName]§!が§Y[1343.GetName]§!、§Y[1365.GetName]§!、§Y[1361.GetName]§!、§Y[1357.GetName]§!、§Y[1397.GetName]§!で最大の交易力を持つ。"
  EFFECT_REMOVE_TRIGGERED_MODIFIER:1 "$PROV$は条件付き補正「§Y$MODIFIER$§!」を失います。"
  prussian_monarchy_base_ruler:0 "国王"
  prussian_monarchy_base_ruler_female:0 "女王"
