--- a/source/localisation/cossacks_l_english.yml
+++ b/source/localisation/cossacks_l_english.yml
@@ -1243,8 +1243,8 @@
  dhimmi_estate_events.3.t:0 "宗教的な現実主義"
  dhimmi_estate_events.3.d:0 "誰もが好んでいるわけではないが、我々の領土の非ムスリムはここ数年で影響力を増している。ズィンミーらは、我が国のより重要な交易ギルドの間でさえ頻繁に見られ、多くは州の行政官として奉公したり、地位の世襲を許されている。"
  dhimmi_estate_events.3.a:0 "OK"
- dhimmi_estate_events.4.t:0 "ズィンミーの軽視"
- dhimmi_estate_events.4.d:0 "彼らは我々の社会の重要な部分を占めているが、非ムスリムは最近、他の集団よりも不利になっている。彼らは定期的にあらゆる種類の政府への奉仕を見直されており、多くの差別的税金を支払わなければならず、しばしばムスリムの競争相手に商取引を見出している。"
+ dhimmi_estate_events.4.t:0 "ズィンミーの周縁化"
+ dhimmi_estate_events.4.d:0 "非ムスリムは我々の社会で重要な位置を占めているが、最近では他の集団に押され気味だ。彼らはあらゆる種類の行政サービスにおいて定期的に見下され、多くの差別的な税金を支払わなければならず、商取引がムスリムの競争相手に流れるのをしばしば目にしている。"
  dhimmi_estate_events.4.a:0 "OK"
  dhimmi_estate_events.5.t:0 "$ESTATE_DHIMMI$と$ESTATE_NOBLES$"
  dhimmi_estate_events.5.d:0 "ムスリムの$ESTATE_NOBLES$たちの多くは、我々の政府の異教徒たちに対する不当で不公平な支持を感じていると声を上げている。$ESTATE_CHURCH$の支援を受け、彼らは、我々が確立されたイスラム慣習に反して我が国を運営しており、異教徒を影響力ある地位から締め出すべきだと主張している。\n地方の貴族や商人によって全面的に支援された$ESTATE_DHIMMI$によって支配されている州における新しい聖堂の建設は、さらに問題を拡大させており、$ESTATE_CHURCH$と$ESTATE_NOBLES$は神聖な建物を取り壊し、異教徒たちを彼ら自身のあるべき場所に移すよう要求している。"
