--- a/source/localisation/new_missions_l_english.yml
+++ b/source/localisation/new_missions_l_english.yml
@@ -1426,7 +1426,7 @@
  mission_secure_the_silk_road_desc:0 "シルクロードの富は現在大部分が我々の国境地帯内にある貿易路を流れる。これらの経路が繁栄し続けるよう努めねばならない。"
  tatar_silk_road_tooltip:0 "§Yペルシア§!もしくは§Y中央アジア§!、§Yホラーサーン§!地方にレベル3の交易中心地のある州を少なくとも§Y1§!州領有する。"
  tatar_silk_road_tooltip_2:0 "§Yペルシア§!もしくは§Y中央アジア§!、§Yホラーサーン§!地方にレベル2の交易中心地のある州を少なくとも§Y6§!州領有する。"
- tatar_silk_road_tooltip_3:0 "§Yペルシア§!もしくは§Y中央アジア§!、§Yホラーサーン§!地域で、§Y市場§!または§Y交易倉庫§!、§Y証券取引所§!のある州を少なくとも§Y8§!州領有する。"
+ tatar_silk_road_tooltip_3:0 "§Yペルシア§!もしくは§Y中央アジア§!、§Yホラーサーン§!地方で、§Y市場§!または§Y交易倉庫§!、§Y証券取引所§!のある州を少なくとも§Y8§!州領有する。"
  mission_conquer_kazakhstan_title:0 "カザフの平定"
  mission_conquer_kazakhstan_desc:0 "さらにずっとステップに入り込まねばならない。東方へと行進する際は、カザフは我がオルドに参加させねばならない。"
  mission_conquer_samarkand_title:0 "サマルカンドの請求"
