--- a/source/localisation/red_queen_text_l_english.yml
+++ b/source/localisation/red_queen_text_l_english.yml
@@ -701,8 +701,8 @@
  dlc114_reason_generic:0 "§YGuns, Drums and Steel Volume 3 Music Pack§!は、テンポを早くし低音を上げたメタルな新しい曲を12曲追加し、Europa Universalisのプレイ体験を高めます。"
  dlc115_reason_mission_trees:0 "§YLions of the North Expansion§!は固有のミッションツリー・政府改革・階級特権・特殊ユニットを追加します。"
  dlc115_reason_mission_trees_reason:0 "\n独特で面白いミッション・政府改革・階級特権・特殊ユニットが得られるであろう国を選んでいるため、このDLCを推奨します。"
- dlc115_reason_new_units:0 "§YLions of the North Expansion§!は、スカンディナヴィア、バルト海、北ドイツ地域に新しいユニットモデルを追加します。"
- dlc115_reason_new_units_reason:1 "\n選択した地域の国々（スカンディナヴィア、バルト海、北ドイツ地域のいずれか）に新しいユニットモデルが追加されるため、このDLCを推奨します。"
+ dlc115_reason_new_units:0 "§YLions of the North Expansion§!は、スカンディナヴィア、バルト海、北ドイツ地方に新しいユニットモデルを追加します。"
+ dlc115_reason_new_units_reason:1 "\n選択した地域の国々（スカンディナヴィア、バルト海、北ドイツのいずれか）に新しいユニットモデルが追加されるため、このDLCを推奨します。"
  dlc115_reason_new_music:0 "§YLions of the North Expansion§!は新しい楽曲を追加します。"
  dlc115_reason_new_music_reason:0 "\n選択した地域の国々（スカンディナヴィアまたはバルト海のいずれか）に3つの新しい楽曲が追加されるため、このDLCを推奨します。"
  LANDING_dlc114_TEXT:0 "主な要素：\n- 12種類の新しいメタル・ソング"
